Fix CSS wrapping bug in navigation on public pages for longer instance names

--- a/app/javascript/styles/mastodon/containers.scss
+++ b/app/javascript/styles/mastodon/containers.scss
@@ -256,6 +256,7 @@
     .brand {
       display: block;
       padding: 15px;
+      white-space: nowrap;
 
       svg {
         display: block;
